--- a/AuctCentral/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AuctCentral/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -28,11 +28,11 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/auctionsearchwords']">Search Words</a
+            <a class="nav-link text-dark" [routerLink]="['/searchwords']">Search Words</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/auctioncategorysite']">Category Site</a
+            <a class="nav-link text-dark" [routerLink]="['/categorysites']">Category Site</a
             >
           </li>
         </ul>
