--- a/AuctCentral/ClientApp/src/app/home/home.component.html
+++ b/AuctCentral/ClientApp/src/app/home/home.component.html
@@ -1,37 +1,29 @@
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="animated fadeIn">
   <div class="row">
     <div class="col-md-12">
       <div class="card">
         <div class="card-header ">
-          Screener Results Matt
+          Search Auction Items
         </div>
-        <div class="card-body" style="height:750px;">
+        <div class="card-body" style="height:1250px;">
 
 
           <form class="row g-2 needs-validation" standalone novalidate>
 
 
 
+            <div class="col-md-12">
+              <div class="valid-feedback">Looks good!</div>
+              <label class="form-check-label" for="productName">
+                Keywords
+              </label>
 
-            <div class="col-md-4" *ngIf="auctionSites">
+              <input type="text" class="form-control" id="productName"
+                     [(ngModel)]="auctionItemsResourceParameters.productName" name="productName">
+            </div>
+            <div class="col-md-6" *ngIf="auctionSites">
               <label class="form-check-label" for="auctionSites">
                 Auction Sites
               </label>
@@ -41,19 +33,19 @@
               </select>
 
             </div>
-            <div class="col-md-4" *ngIf="auctionSearchWords">
+            <div class="col-md-6" *ngIf="auctionSearchWords">
               <label class="form-check-label" for="auctionSearchWords">
-                Auction Search Words
+                Search Words
               </label>
               <select class="form-control" name="auctionSearchWords" id="auctionSearchWords" #t [(ngModel)]="auctionItemsResourceParameters.auctionSearchWordId">
                 <option *ngFor="let option of auctionSearchWords" [value]="option.id">{{option.searchWord}}</option>
               </select>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-6">
               <div class="valid-feedback">Looks good!</div>
               <label class="form-check-label" for="itemPriceMin">
-                Item Price Min
+                 Price Min
               </label>
 
               <input type="number" class="form-control" id="itemPriceMin"
@@ -61,10 +53,10 @@
 
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-6">
               <div class="valid-feedback">Looks good!</div>
               <label class="form-check-label" for="itemPriceMin">
-                Item Price Max
+                 Price Max
               </label>
 
               <input type="number" class="form-control" id="itemPriceMax"
@@ -73,7 +65,7 @@
             </div>
             <div class="col-md-6">
               <label class="form-check-label" for="auctionEndMin">
-                Auction Date Min
+                End Date Min
               </label>
               <br />
               <mat-form-field appearance="fill">
@@ -86,7 +78,7 @@
             </div>
             <div class="col-md-6">
               <label class="form-check-label" for="auctionEndMin">
-                Auction Date Max
+                End Date Max
               </label>
               <br />
               <mat-form-field appearance="fill">
@@ -111,61 +103,116 @@
           </button>
           <br />
           <br />
-          <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="auctionItems">
-            <thead>
-              <tr>
-                <th width="100px">
-                </th>
-                <th width="300px">
-                  Product Name
+          <div *ngIf="searchRunning">
+            <widget-loading-data></widget-loading-data>
+          </div>
+            <div class="mat-elevation-z8" style="height:750px;overflow-y:auto">
+              <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                             showFirstLastButtons
+                             aria-label="Select page of periodic elements">
+              </mat-paginator>
+              <table mat-table [dataSource]="auctionItemsSource" class="width:100%">
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-                  <i (click)="sortByName()" [ngClass]="!sortNameDesc ? 'cil-sort-descending' : 'cil-sort-ascending'"></i>
-                </th>
-                <th width="150">Ends</th>
-                <th width="150">Site</th>
-                <th width="150">Search Name</th>
-                <th width="150px">Total Bids</th>
-                <th width="150px">
-                  Item Price
-                  <i (click)="sortByPrice()" [ngClass]="!sortPriceDesc ? 'cil-sort-descending' : 'cil-sort-ascending'"></i>
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let auctionItem of auctionItems">
-                <td width="100px">
+                <ng-container matColumnDef="image">
+                  <th mat-header-cell *matHeaderCellDef>  </th>
+                  <td mat-cell *matCellDef="let element"> <img src="{{element.imageUrl}}" style="width:80px;height:100px;" /> </td>
+                </ng-container>
+                <ng-container matColumnDef="productname">
+                  <th mat-header-cell *matHeaderCellDef> Product Name <i (click)="sortByName()" [ngClass]="!sortNameDesc ? 'cil-sort-descending' : 'cil-sort-ascending'"></i></th>
+                  <td mat-cell *matCellDef="let element">
+                    <a target="_blank" href="{{element.url}}">
+                      {{ element.productName }}
+                    </a>
+                  </td>
+                </ng-container>
+                <ng-container matColumnDef="ends">
+                  <th mat-header-cell *matHeaderCellDef> Ends </th>
+                  <td mat-cell *matCellDef="let element">   {{ GetAuctionDate(element.auctionEndDate)}} </td>
+                </ng-container>
 
-                  <img src="{{auctionItem.imageUrl}}" style="width:80px;height:100px;" />
-                </td>
-                <td width="300px">
-                  <a target="_blank" href="{{auctionItem.url}}">
-                    {{ auctionItem.productName }}
-                  </a>
-                </td>
-                <td width="150px">
-                  
-                  {{ GetAuctionDate(auctionItem.auctionEndDate)}}
-                </td>
-                <td width="150px">
-                  {{ GetAuctionSiteName(auctionItem.auctionSiteId)
-                  }}
-                </td>
-                <td width="150px">
+                <ng-container matColumnDef="site">
+                  <th mat-header-cell *matHeaderCellDef> Site </th>
+                  <td mat-cell *matCellDef="let element">  {{ GetAuctionSiteName(element.auctionSiteId)   }} </td>
+                </ng-container>
 
-                  {{ GetAuctionSearchWord(auctionItem.auctionSearchWordId)  }}
-                </td>
-                <td width="150px">
-                  {{ auctionItem.totalBids }}
-                </td>
-                <td width="150px">
-                  {{ auctionItem.itemPrice | currency }}
-                </td>
-              </tr>
-            </tbody>
-          </table>
+                <ng-container matColumnDef="searchname">
+                  <th mat-header-cell *matHeaderCellDef> Search Name </th>
+                  <td mat-cell *matCellDef="let element">   {{ GetAuctionSearchWord(element.auctionSearchWordId)  }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="totalbids">
+                  <th mat-header-cell *matHeaderCellDef> Total Bids </th>
+                  <td mat-cell *matCellDef="let element">   {{ element.totalBids }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="price">
+                  <th mat-header-cell *matHeaderCellDef> Price <i (click)="sortByPrice()" [ngClass]="!sortPriceDesc ? 'cil-sort-descending' : 'cil-sort-ascending'"></i></th>
+                  <td mat-cell *matCellDef="let element">   {{ element.itemPrice | currency }} </td>
+                </ng-container>
+
+
+              </table>
+
+
+            </div>
+            <!--
+    <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="auctionItems">
+      <thead>
+        <tr>
+          <th width="100px">
+          </th>
+          <th width="300px">
+            Product Name
+
+            <i (click)="sortByName()" [ngClass]="!sortNameDesc ? 'cil-sort-descending' : 'cil-sort-ascending'"></i>
+          </th>
+          <th width="150">Ends</th>
+          <th width="150">Site</th>
+          <th width="150">Search Name</th>
+          <th width="150px">Total Bids</th>
+          <th width="150px">
+            Item Price
+            <i (click)="sortByPrice()" [ngClass]="!sortPriceDesc ? 'cil-sort-descending' : 'cil-sort-ascending'"></i>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let auctionItem of auctionItems">
+          <td width="100px">
+
+            <img src="{{auctionItem.imageUrl}}" style="width:80px;height:100px;" />
+          </td>
+          <td width="300px">
+            <a target="_blank" href="{{auctionItem.url}}">
+              {{ auctionItem.productName }}
+            </a>
+          </td>
+          <td width="150px">
+
+            {{ GetAuctionDate(auctionItem.auctionEndDate)}}
+          </td>
+          <td width="150px">
+            {{ GetAuctionSiteName(auctionItem.auctionSiteId)   }}
+          </td>
+          <td width="150px">
+
+            {{ GetAuctionSearchWord(auctionItem.auctionSearchWordId)  }}
+          </td>
+          <td width="150px">
+            {{ auctionItem.totalBids }}
+          </td>
+          <td width="150px">
+            {{ auctionItem.itemPrice | currency }}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+      -->
+          </div>
+
         </div>
-
-      </div>
 
       
 
