Update to the auction site to include statistics

--- a/AuctCentral/ClientApp/src/app/auction-category-site/auction-category-site.component.html
+++ b/AuctCentral/ClientApp/src/app/auction-category-site/auction-category-site.component.html
@@ -56,7 +56,7 @@
       <div class="card">
         <div class="card-header ">
           Category Sites
-          <input type="text" [(ngModel)]="searchCategorySite" (ngModelChange)="onKeypressEvent($event)" />
+          <input type="text" [(ngModel)]="searchCategorySite" (ngModelChange)="onKeypressEvent()" />
         </div>
         <div class="card-body" style="height:750px;overflow-y:auto">
 
