--- a/AuctCentral/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AuctCentral/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,21 +20,21 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
+          <li class="nav-item"
+              [routerLinkActive]="['link-active']"
+              [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/searchwords']">Search Words</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/searchwords']">Search Words</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/categorysites']">Category Site</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/categorysites']">Category Site</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/statistics']">Statistics</a>
+          </li>
+          
         </ul>
       </div>
     </div>
