--- a/AuctCentral/ClientApp/src/app/auction-category-site/auction-category-site.component.html
+++ b/AuctCentral/ClientApp/src/app/auction-category-site/auction-category-site.component.html
@@ -29,13 +29,13 @@
             <tbody>
               <tr *ngFor="let auctionSiteCategoryWord of auctionSiteCategoryWords">
                 <td width="300px">
-                  {{GetCategoryName(auctionSiteCategoryWord.auctionCategoryId)}}
+                  {{GetCategoryName(auctionSiteCategoryWord.categoryId)}}
                 </td>
                 <td width="200px">
-                  {{GetAuctionSearchWords(auctionSiteCategoryWord.auctionSearchWordId)}}
+                  {{GetSearchWords(auctionSiteCategoryWord.searchWordId)}}
                 </td>
                 <td width="200px">
-                  {{GetSiteNameFromCategory(auctionSiteCategoryWord.auctionCategoryId)}}
+                  {{GetSiteNameFromCategory(auctionSiteCategoryWord.categoryId)}}
                 </td>
                 <td width="75px">
                   <button class="btn btn-danger" data-toggle="modal" data-target="#confirmAuctionSiteCategoryWordDelete" (click)="ConfirmDeleteSiteCategoryWord(auctionSiteCategoryWord.id)">Delete</button>
@@ -77,7 +77,7 @@
             <tbody>
               <tr *ngFor="let auctionCategorySite of auctionCategorySites">
                 <td width="200px">
-                  {{GetAuctionSiteName(auctionCategorySite.auctionSiteId)}}
+                  {{GetAuctionSiteName(auctionCategorySite.siteId)}}
                 </td>
                 <td width="100px">
                   {{auctionCategorySite.siteCategoryId}}
@@ -113,8 +113,8 @@
         <label class="form-check-label" for="auctionSearchWordsOptions">
           Search Word
         </label>
-        <select class="form-control" name="auctionSearchWordsOptions" id="auctionSearchWordsOptions" #t [(ngModel)]="auctionSiteCategoryWordNew.auctionSearchWordId">
-          <option *ngFor="let option of auctionSearchWordsOptions" [value]="option.id">{{option.searchWord}}</option>
+        <select class="form-control" name="auctionSearchWordsOptions" id="auctionSearchWordsOptions" #t [(ngModel)]="auctionSiteCategoryWordNew.searchWordId">
+          <option *ngFor="let option of auctionSearchWordsOptions" [value]="option.id">{{option.word}}</option>
         </select>
         <br />
         <label class="form-check-label" for="auctionSitesOptions">
@@ -128,7 +128,7 @@
         <label class="form-check-label" for="auctionSiteCategoryOptions">
           Site Category
         </label>
-        <select class="form-control" name="auctionSiteCategoryOptions" id="auctionSiteCategoryOptions" #t [(ngModel)]="auctionSiteCategoryWordNew.auctionCategoryId">
+        <select class="form-control" name="auctionSiteCategoryOptions" id="auctionSiteCategoryOptions" #t [(ngModel)]="auctionSiteCategoryWordNew.categoryId">
           <option *ngFor="let option of auctionCategorySitesOptionsFilter" [value]="option.id">{{option.siteCategoryName}}</option>
         </select>
 
